added filter buttons

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
   --white: rgb(255, 255, 255);
   --white2: #f3f3f4;
   --blue: #177e89;
+  --darkblue: rgb(25, 88, 104);
 }
 
 body {
@@ -92,7 +93,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 350px;
+  height: 385px;
   aspect-ratio: 8/2;
   color: var(--white);
   /* box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5); */
@@ -102,7 +103,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  /* filter: blur(3px); */
+  filter: blur(2px);
   background-color: rgba(0, 0, 0, 0.5); /* Change the color and opacity as needed */
   z-index: -21;
 }
@@ -118,11 +119,12 @@ body {
   border-radius: 100px;
   padding: 5px 20px;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 5px 0;
 }
 
 .search-bar h1 {
   text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-  margin: 0 0 5px 10px;
+  margin: 0 0 4px 10px;
 }
 
 .search:active,
@@ -147,16 +149,58 @@ body {
   background-color: var(--poo);
 }
 
+.categories {
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+}
+
+.categories a {
+  text-decoration: none;
+  background-color: var(--blue);
+  color: #ffffff;
+  min-width: 100px;
+  border-radius: 100px;
+  padding: 8px 20px;
+  margin: 10px 0;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  transition: 150ms ease-in-out;
+  text-align: center;
+}
+
+.categories a:hover {
+  background-color: var(--darkblue);
+}
+
 .gallery {
+  position: relative;
   padding: 15px 150px 15px 150px;
   background-color: #ffffff;
   box-shadow: 0px -20px 18px -20px rgba(0, 0, 0, 0.5);
-  z-index: 998;
+  z-index: 898;
 }
 
 .gallery h1 {
   color: var(--blue);
-  margin: 0 0 10px 0;
+  margin: 0 0 10px 10px;
+}
+
+.gallery .see-more-btn {
+  position: absolute;
+  right: 170px;
+  bottom: 30px;
+  text-decoration: none;
+  background-color: var(--blue);
+  color: #ffffff;
+  border-radius: 100px;
+  padding: 8px 20px;
+  margin: 10px 0px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  transition: 150ms ease-in-out;
+}
+
+.gallery .see-more-btn:hover {
+  background-color: var(--darkblue);
 }
 
 .items {
@@ -183,7 +227,7 @@ body {
 
 .item-image {
   aspect-ratio: 3/2;
-  height: 180px;
+  height: 150px;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -206,7 +250,7 @@ body {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 999; /* Sit on top */
   padding-top: 50px; /* Location of the box */
   left: 0;
   top: 0;
@@ -323,11 +367,13 @@ body {
 
 ::-webkit-scrollbar-thumb {
   /* background: #b8b8b8; */
-  background-color: rgb(63, 138, 148);
+  /* background-color: rgb(63, 138, 148); */
+  background-color: rgb(218, 218, 218);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   /* background: #979797; */
-  background-color: rgb(41, 104, 112);
+  /* background-color: rgb(41, 104, 112); */
+  background-color: rgb(187, 187, 187);
 }
