--- a/index2.css
+++ b/index2.css
@@ -2,8 +2,8 @@
 
 :root {
   --grey: #2c363f;
-  --grey2: #323031;
-  --grey3: #5c585a;
+  --grey2: #1f1f1f;
+  --grey3: #383838;
   --pink: #e75a7c;
   --poo: #cda434;
   --poohighlight: #ddb340;
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--grey2);
   margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -26,7 +26,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 35px 150px;
-  background-color: var(--white);
+  background-color: var(--grey2);
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
 }
 
@@ -34,11 +34,12 @@ body {
   max-width: 250px;
   position: absolute;
   right: 44%;
+  filter: brightness(100);
 }
 
 .nav-bar a {
   text-decoration: none;
-  color: black;
+  color: var(--white);
   font-weight: 500;
 }
 
@@ -54,7 +55,7 @@ body {
 }
 
 .nav-bar .sign-up {
-  color: #ffffff;
+  /* color: var(--grey2); */
 }
 
 .page-navigation-buttons a {
@@ -68,23 +69,24 @@ body {
 }
 
 .sign-up {
-  background-color: var(--poohighlight);
-  /* color: white; */
+  background-color: transparent;
+  color: white;
   border-radius: 100px;
-  border: 0;
+  border: 2px solid var(--poo);
   padding: 10px 30px 10px 30px;
   transition: 150ms ease-in-out;
   margin-left: 80px; /* spacing between login singup links*/
   font-weight: 500;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .sign-up:hover {
-  background-color: var(--poo);
+  background-color: var(--poohighlight);
 }
 
 .login:hover {
-  color: var(--poo);
+  color: var(--poohighlight);
 }
 
 .search-component {
@@ -96,6 +98,7 @@ body {
   height: 385px;
   aspect-ratio: 8/2;
   color: var(--white);
+
   /* box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5); */
 }
 
@@ -103,7 +106,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  filter: blur(2px);
+  filter: blur(2px) saturate(0.9);
   background-color: rgba(0, 0, 0, 0.5); /* Change the color and opacity as needed */
   z-index: -21;
 }
@@ -114,6 +117,7 @@ body {
 
 .search {
   border: 2px solid #ffffff;
+  /* background-color: #000; */
   width: 700px;
   height: 30px;
   border-radius: 100px;
@@ -134,10 +138,10 @@ body {
 }
 
 .submit-btn {
-  background-color: var(--poohighlight);
-  color: #ffffff;
+  background-color: var(--poo);
+  color: var(--grey2);
   border-radius: 100px;
-  border: 2px solid transparent;
+  border: 2px solid var(--poo);
   padding: 13px 13px;
   margin-left: 10px;
   cursor: pointer;
@@ -146,7 +150,7 @@ body {
 }
 
 .submit-btn:hover {
-  background-color: var(--poo);
+  background-color: var(--poohighlight);
 }
 
 .categories {
@@ -157,7 +161,7 @@ body {
 
 .categories a {
   text-decoration: none;
-  background-color: var(--blue);
+  background-color: var(--grey3);
   color: #ffffff;
   min-width: 100px;
   border-radius: 100px;
@@ -169,19 +173,20 @@ body {
 }
 
 .categories a:hover {
-  background-color: var(--darkblue);
+  background-color: var(--poohighlight);
 }
 
 .gallery {
   position: relative;
   padding: 15px 150px 15px 150px;
-  background-color: #ffffff;
+  /* background-color: var(--grey3); */
+  background-color: #292929;
   box-shadow: 0px -20px 18px -20px rgba(0, 0, 0, 0.5);
   z-index: 898;
 }
 
 .gallery h1 {
-  color: var(--blue);
+  color: var(--white);
   margin: 0 0 10px 10px;
 }
 
@@ -190,8 +195,8 @@ body {
   right: 170px;
   bottom: 30px;
   text-decoration: none;
-  background-color: var(--blue);
-  color: #ffffff;
+  background-color: var(--poo);
+  color: var(--grey2);
   border-radius: 100px;
   padding: 8px 20px;
   margin: 10px 0px;
@@ -200,10 +205,11 @@ body {
 }
 
 .gallery .see-more-btn:hover {
-  background-color: var(--darkblue);
+  background-color: var(--poohighlight);
 }
 
 .items {
+  color: var(--white);
   display: flex;
   /* justify-content: space-between; */
   gap: 30px;
@@ -216,7 +222,7 @@ body {
 .item {
   padding: 10px 45px 10px 45px;
   /* background-color: var(--blue); */
-  background-color: #ffffff;
+  background-color: var(--grey2);
   border-radius: 20px;
   /* display: flex;
   flex-direction: column; */
@@ -230,6 +236,7 @@ body {
   height: 150px;
   border-radius: 10px;
   object-fit: cover;
+  filter: saturate(0.5);
 }
 
 .item-link-text {
@@ -265,21 +272,25 @@ body {
 .modal-content {
   position: relative;
   /* background-color: #fefefe; */
-  background-color: var(--blue);
+  background-color: var(--poo);
   margin: auto;
   padding: 50px 80px;
   width: 900px;
   height: 720px;
   border-radius: 25px;
-  color: white;
+  color: #1c1c1c;
   overflow-y: scroll;
+}
+
+.sub-logo {
+  filter: brightness(0.08);
 }
 
 /* The Close Button */
 .close {
   position: fixed;
   right: 500px;
-  color: #ffffff;
+  color: #1c1c1c;
   font-size: 28px;
   font-weight: bold;
   transition: 150ms ease-in-out;
@@ -288,7 +299,7 @@ body {
 
 .close:hover,
 .close:focus {
-  color: var(--poo);
+  color: var(--white);
   text-decoration: none;
   cursor: pointer;
 }
@@ -327,11 +338,12 @@ body {
 
 .inputs label {
   margin: 0 10px 0 10px;
+  font-weight: 500;
 }
 
 .submit-details {
-  background-color: var(--poohighlight);
-  color: #ffffff;
+  background-color: var(--grey2);
+  color: var(--white);
   font-size: 18px;
   border-radius: 100px;
   border: 2px solid transparent;
@@ -345,7 +357,8 @@ body {
 }
 
 .submit-details:hover {
-  background-color: var(--poo);
+  background-color: var(--white);
+  color: var(--grey2);
 }
 
 .background-logo {
@@ -368,12 +381,12 @@ body {
 ::-webkit-scrollbar-thumb {
   /* background: #b8b8b8; */
   /* background-color: rgb(63, 138, 148); */
-  background-color: rgb(218, 218, 218);
+  background-color: rgb(82, 82, 82);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   /* background: #979797; */
   /* background-color: rgb(41, 104, 112); */
-  background-color: rgb(187, 187, 187);
+  background-color: rgb(107, 107, 107);
 }
