--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
   --pink: #e75a7c;
   --poo: #cda434;
   --poohighlight: #ddb340;
-  --poohighlight2:#f6d70f;
+  --poohighlight2: #f6d70f;
   --poohighdark: #dec10a;
   --offwhite: rgb(233, 233, 233);
   --white: rgb(255, 255, 255);
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-color: var(--grey2);
+  background-color: #292929;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -35,7 +35,7 @@ body {
 .logo {
   max-width: 250px;
   position: absolute;
-  right: 44%;
+  right: 42%;
   filter: brightness(100);
 }
 
@@ -54,10 +54,6 @@ body {
 
 .log-sign a {
   transition: 150ms ease-in-out;
-}
-
-.nav-bar .sign-up {
-  /* color: var(--grey2); */
 }
 
 .page-navigation-buttons a {
@@ -89,7 +85,6 @@ body {
   color: var(--grey2);
   /* background: linear-gradient(30deg, rgba(205, 164, 52, 1) 0%, rgba(255, 237, 28, 1) 100%); */
   /* background: linear-gradient(30deg, rgb(205, 164, 52) 0%, rgba(255, 237, 28, 1) 80%, rgb(242, 242, 242) 100%); */
-
 }
 
 .login:hover {
@@ -198,13 +193,14 @@ body {
   background-color: #292929;
   box-shadow: 0px -20px 18px -20px rgba(0, 0, 0, 0.5);
   z-index: 898;
+  /* height: 600px; */
 }
 
 .gallery h1 {
   display: inline-block;
   color: var(--white);
   margin: 25px 0 25px 10px;
-} 
+}
 
 .gallery .see-more-btn {
   position: absolute;
@@ -225,7 +221,7 @@ body {
 .gallery .see-more-btn:hover {
   background-color: var(--poohighlight2);
   border-color: var(--poohighlight2);
-  color:  var(--grey2);
+  color: var(--grey2);
 }
 
 .items {
@@ -285,22 +281,22 @@ body {
   color: var(--poohighlight2);
 }
 
-/* The Modal (background) */
+/* Modal */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 999; /* Sit on top */
-  padding-top: 50px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 999;
+  padding-top: 50px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content */
+/* Modal content */
 .modal-content {
   position: relative;
   /* background-color: #fefefe; */
@@ -314,10 +310,6 @@ body {
   overflow-y: scroll;
 }
 
-.sub-logo {
-}
-
-/* The Close Button */
 .close {
   position: fixed;
   right: 500px;
@@ -353,7 +345,7 @@ body {
 
 .inputs input {
   display: flex;
-  margin: 2px 0 2px 0;
+  margin: 1px 0 1px 0;
   flex-direction: column;
   width: 300px;
   border-radius: 20px;
@@ -402,6 +394,7 @@ body {
   max-width: 700px;
 }
 
+/* Scrollbar */
 ::-webkit-scrollbar {
   width: 5px;
   height: 10px;
@@ -414,7 +407,7 @@ body {
 ::-webkit-scrollbar-thumb {
   /* background: #b8b8b8; */
   /* background-color: rgb(63, 138, 148); */
-  background-color: rgb(82, 82, 82);
+  background-color: #525252;
   border-radius: 10px;
 }
 
@@ -422,4 +415,42 @@ body {
   /* background: #979797; */
   /* background-color: rgb(41, 104, 112); */
   background-color: rgb(107, 107, 107);
+}
+
+/* Footer */
+.footer {
+  margin-top: 200px;
+}
+
+/* Footer content */
+.footer-content {
+  background-color: var(--grey2);
+  display: flex;
+  flex-direction: column;
+  padding: 20px 100px;
+  gap: 15px;
+}
+
+.footer-logo {
+  max-width: 200px;
+}
+
+.footer-content a {
+  color: var(--white);
+  text-decoration: var(--white);
+  transition: 150ms ease-in-out;
+}
+
+.footer-content a:hover {
+  color: var(--poohighlight2);
+}
+
+.footer-links {
+  display: flex;
+  gap: 15px;
+}
+
+.footer-socials {
+  display: flex;
+  gap: 15px;
 }
