--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ body {
   background-color: transparent;
   color: white;
   border-radius: 100px;
-  border: 2px solid var(--gold);
+  border: 2px solid #cda434;
   padding: 10px 30px 10px 30px;
   transition: 150ms ease-in-out;
   margin-left: 80px;
@@ -132,7 +132,7 @@ body {
   background-color: transparent;
   color: var(--white);
   border-radius: 100px;
-  border: 2px solid var(--gold);
+  border: 2px solid #cda434;
   padding: 13px 13px;
   margin-left: 10px;
   cursor: pointer;
@@ -197,7 +197,7 @@ body {
   background-color: transparent;
   color: var(--white);
   border-radius: 100px;
-  border: 2px solid var(--gold);
+  border: 2px solid #cda434;
   padding: 8px 20px;
   margin: 10px 0px;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
@@ -349,7 +349,7 @@ body {
   color: var(--white);
   font-size: 18px;
   border-radius: 100px;
-  border: 2px solid var(--gold);
+  border: 2px solid #cda434;
   padding: 10px 25px;
   margin-left: auto;
   cursor: pointer;
